# internship

./: refactor_urls.py  render.yaml  src_diff.txt  srs_authentication.md  srs_whole_system.md
backend/: .env  alter.py  backfill_beneficiaries.py  clear_db.py  database.py  main.py  migrate.py  migrate2.py  pyproject.toml  requirements.txt  schemas.py  seed.py  test_dashboard.py  test_login.py
backend/app/: database.py  dependencies.py  logger.py  main.py  security.py  seed.py  validators.py
backend/app/models/: __init__.py  activity_log.py  agent.py  area_assignment.py  beneficiary.py  contractor.py  dashboard_stats.py  demand.py  employee.py  problem.py  supplier.py  woreda.py  zone.py
backend/app/routes/: activity_logs.py  agents.py  area_assignments.py  auth.py  beneficiaries.py  contractors.py  dashboard.py  demands.py  employees.py  problems.py  suppliers.py  zones_woredas.py
backend/app/schemas/: __init__.py
backend/app/services/: audit_logger.py  dashboard_service.py
frontend/: package-lock.json  package.json  remove_pdf.py  replace_alerts.py
frontend/src/: App.jsx  api.js
frontend/src/components/: AgentDetailsModal.jsx  BeneficiaryDetailsModal.jsx  DemandDetailsModal.jsx  DetailFieldGrid.jsx  DocumentUploadTile.jsx  ImagePreviewModal.jsx  ProblemDetailsModal.jsx  ScopeSelector.jsx
frontend/src/utils/: detailViewHelpers.js  fileUploadHelpers.js  formHelpers.js  validation.js
supplier-portal/: package-lock.json  package.json
supplier-portal/src/: App.jsx  index.css
supplier-portal/src/components/: DarkModeToggle.jsx  Header.jsx  Sidebar.jsx
(+70 files in other folders)
