[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=46.0.6",
    "fastapi>=0.128.8",
    "imagekitio>=5.2.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.39.0",
]
